Add link to wiki for definition
Suggested as placeholder until if/ when page is built

--- a/general-info/venues/accommodations.html
+++ b/general-info/venues/accommodations.html
@@ -15,8 +15,8 @@
         <ul>
             <!--<li>Mailing <a href="mailto:code4lib@library.ucla.edu">code4lib@library.ucla.edu</a></li>-->
             <li>Talking with a volunteer at the registration desk who will forward the request</li>
-            <li>Asking for help from a <a href="/duty-officers">duty officer</a></li>
-        </ul>
+            <li>Asking for help from a <a href="http://wiki.code4lib.org/Duty_Officers">Duty Officer</a></li>
+        </ul>                   
         <!--<p>
             For inquiries about accessible parking and transportation, we recommend talking
             with the <a href="http://luskinconferencecenter.ucla.edu/">Luskin Center</a> directly.
