--- a/general-info/venues/accommodations.html
+++ b/general-info/venues/accommodations.html
@@ -6,8 +6,8 @@
 
         <h3>Accommodation Requests</h3>
         <p>
-            When registering, attendees were asked to include any accessibility needs
-            they might require. We are doing our best to meet these needs. Everyone is
+            When registering, attendees are asked to include any accessibility needs
+            they might require. We will do our best to meet these needs. Everyone is
             encouraged to contact the accessibility committee if they have
             questions or new accommodation needs arise. The accessibility committee may
             be contacted by:
